Package_Tools/include-C/gmp/gmp.h

typedef unsigned int		mp_limb_t;
typedef unsigned long long int	mp_limb_t;
typedef unsigned long int	mp_limb_t;
typedef unsigned long int	mp_bitcnt_t;
typedef mp_limb_t *		mp_ptr;
typedef const mp_limb_t *	mp_srcptr;
typedef int			mp_size_t;
typedef long int		mp_size_t;
/* Types for function declarations in gmp files.  */
/* ??? Should not pollute user name space with these ??? */
typedef const __mpz_struct *mpz_srcptr;
typedef __mpz_struct *mpz_ptr;
typedef const __mpf_struct *mpf_srcptr;
typedef const __mpq_struct *mpq_srcptr;
typedef __mpq_struct *mpq_ptr;
typedef __gmp_randstate_struct *gmp_randstate_ptr;
extern unsigned long int mpz_get_ui (mpz_srcptr)  ;
extern mp_limb_t mpz_getlimbn (mpz_srcptr, mp_size_t)  ;
extern mp_bitcnt_t mpz_hamdist (mpz_srcptr, mpz_srcptr)  ;
extern void mpz_import (mpz_ptr, size_t, int, size_t, int, size_t, const void *);
extern void mpz_init (mpz_ptr) ;
extern void mpz_init2 (mpz_ptr, mp_bitcnt_t);
extern void mpz_inits (mpz_ptr, ...) ;
extern void mpz_init_set (mpz_ptr, mpz_srcptr);
extern void mpz_init_set_d (mpz_ptr, double);
extern void mpz_init_set_si (mpz_ptr, signed long int);
extern int mpz_init_set_str (mpz_ptr, const char *, int);
extern void mpz_init_set_ui (mpz_ptr, unsigned long int);
extern size_t mpz_inp_raw (mpz_ptr, FILE *);
extern size_t mpz_inp_str (mpz_ptr, FILE *, int);
extern int mpz_invert (mpz_ptr, mpz_srcptr, mpz_srcptr);
extern void mpz_ior (mpz_ptr, mpz_srcptr, mpz_srcptr);
extern int mpz_jacobi (mpz_srcptr, mpz_srcptr) ;
extern int mpz_kronecker_si (mpz_srcptr, long) ;
extern int mpz_kronecker_ui (mpz_srcptr, unsigned long) ;
extern int mpz_si_kronecker (long, mpz_srcptr) ;
extern int mpz_ui_kronecker (unsigned long, mpz_srcptr) ;
extern void mpz_lcm (mpz_ptr, mpz_srcptr, mpz_srcptr);
extern void mpz_lcm_ui (mpz_ptr, mpz_srcptr, unsigned long);
extern void mpz_lucnum_ui (mpz_ptr, unsigned long int);
extern void mpz_lucnum2_ui (mpz_ptr, mpz_ptr, unsigned long int);
extern int mpz_millerrabin (mpz_srcptr, int) ;
extern void mpz_mod (mpz_ptr, mpz_srcptr, mpz_srcptr);
extern void mpz_mul (mpz_ptr, mpz_srcptr, mpz_srcptr);
extern void mpz_mul_2exp (mpz_ptr, mpz_srcptr, mp_bitcnt_t);
extern void mpz_mul_si (mpz_ptr, mpz_srcptr, long int);
extern void mpz_mul_ui (mpz_ptr, mpz_srcptr, unsigned long int);
extern void mpz_neg (mpz_ptr, mpz_srcptr);
extern void mpz_nextprime (mpz_ptr, mpz_srcptr);
extern int mpz_prevprime (mpz_ptr, mpz_srcptr);
extern size_t mpz_out_raw (FILE *, mpz_srcptr);
extern size_t mpz_out_str (FILE *, int, mpz_srcptr);
extern int mpz_perfect_power_p (mpz_srcptr) ;
extern int mpz_perfect_square_p (mpz_srcptr) ;
extern mp_bitcnt_t mpz_popcount (mpz_srcptr)  ;
extern void mpz_pow_ui (mpz_ptr, mpz_srcptr, unsigned long int);
extern void mpz_powm (mpz_ptr, mpz_srcptr, mpz_srcptr, mpz_srcptr);
extern void mpz_powm_sec (mpz_ptr, mpz_srcptr, mpz_srcptr, mpz_srcptr);
extern void mpz_powm_ui (mpz_ptr, mpz_srcptr, unsigned long int, mpz_srcptr);
extern int mpz_probab_prime_p (mpz_srcptr, int) ;
extern void mpz_random (mpz_ptr, mp_size_t);
extern void mpz_random2 (mpz_ptr, mp_size_t);
extern void mpz_realloc2 (mpz_ptr, mp_bitcnt_t);
extern mp_bitcnt_t mpz_remove (mpz_ptr, mpz_srcptr, mpz_srcptr);
extern int mpz_root (mpz_ptr, mpz_srcptr, unsigned long int);
extern void mpz_rootrem (mpz_ptr, mpz_ptr, mpz_srcptr, unsigned long int);
extern void mpz_rrandomb (mpz_ptr, gmp_randstate_ptr, mp_bitcnt_t);
extern mp_bitcnt_t mpz_scan0 (mpz_srcptr, mp_bitcnt_t)  ;
extern mp_bitcnt_t mpz_scan1 (mpz_srcptr, mp_bitcnt_t)  ;
extern void mpz_set (mpz_ptr, mpz_srcptr);
extern void mpz_set_d (mpz_ptr, double);
extern void mpz_set_f (mpz_ptr, mpf_srcptr);
extern void mpz_set_q (mpz_ptr, mpq_srcptr);
extern void mpz_set_si (mpz_ptr, signed long int);
extern int mpz_set_str (mpz_ptr, const char *, int);
extern void mpz_set_ui (mpz_ptr, unsigned long int);
extern void mpz_setbit (mpz_ptr, mp_bitcnt_t);
extern size_t mpz_size (mpz_srcptr)  ;
extern size_t mpz_sizeinbase (mpz_srcptr, int)  ;
extern void mpz_sqrt (mpz_ptr, mpz_srcptr);
extern void mpz_sqrtrem (mpz_ptr, mpz_ptr, mpz_srcptr);
extern void mpz_sub (mpz_ptr, mpz_srcptr, mpz_srcptr);
extern void mpz_sub_ui (mpz_ptr, mpz_srcptr, unsigned long int);
extern void mpz_ui_sub (mpz_ptr, unsigned long int, mpz_srcptr);
extern void mpz_submul (mpz_ptr, mpz_srcptr, mpz_srcptr);
extern void mpz_submul_ui (mpz_ptr, mpz_srcptr, unsigned long int);
extern void mpz_swap (mpz_ptr, mpz_ptr) ;
extern unsigned long int mpz_tdiv_ui (mpz_srcptr, unsigned long int) ;
extern void mpz_tdiv_q (mpz_ptr, mpz_srcptr, mpz_srcptr);
extern void mpz_tdiv_q_2exp (mpz_ptr, mpz_srcptr, mp_bitcnt_t);
extern unsigned long int mpz_tdiv_q_ui (mpz_ptr, mpz_srcptr, unsigned long int);
extern void mpz_tdiv_qr (mpz_ptr, mpz_ptr, mpz_srcptr, mpz_srcptr);
extern unsigned long int mpz_tdiv_qr_ui (mpz_ptr, mpz_ptr, mpz_srcptr, unsigned long int);
extern void mpz_tdiv_r (mpz_ptr, mpz_srcptr, mpz_srcptr);
extern void mpz_tdiv_r_2exp (mpz_ptr, mpz_srcptr, mp_bitcnt_t);
extern unsigned long int mpz_tdiv_r_ui (mpz_ptr, mpz_srcptr, unsigned long int);
extern int mpz_tstbit (mpz_srcptr, mp_bitcnt_t)  ;
extern void mpz_ui_pow_ui (mpz_ptr, unsigned long int, unsigned long int);
extern void mpz_urandomb (mpz_ptr, gmp_randstate_ptr, mp_bitcnt_t);
extern void mpz_urandomm (mpz_ptr, gmp_randstate_ptr, mpz_srcptr);
extern void mpz_xor (mpz_ptr, mpz_srcptr, mpz_srcptr);
extern mp_srcptr mpz_limbs_read (mpz_srcptr);
extern mp_ptr mpz_limbs_write (mpz_ptr, mp_size_t);
extern mp_ptr mpz_limbs_modify (mpz_ptr, mp_size_t);
extern void mpz_limbs_finish (mpz_ptr, mp_size_t);
extern mpz_srcptr mpz_roinit_n (mpz_ptr, mp_srcptr, mp_size_t);
/**************** Rational (i.e. Q) routines.  ****************/

extern void mpq_abs (mpq_ptr, mpq_srcptr);
extern void mpq_add (mpq_ptr, mpq_srcptr, mpq_srcptr);
extern void mpq_canonicalize (mpq_ptr);
extern void mpq_clear (mpq_ptr);
extern void mpq_clears (mpq_ptr, ...);
extern int mpq_cmp (mpq_srcptr, mpq_srcptr) ;
extern int _mpq_cmp_si (mpq_srcptr, long, unsigned long) ;
extern int _mpq_cmp_ui (mpq_srcptr, unsigned long int, unsigned long int) ;
extern int mpq_cmp_z (mpq_srcptr, mpz_srcptr) ;
extern void mpq_div (mpq_ptr, mpq_srcptr, mpq_srcptr);
extern void mpq_div_2exp (mpq_ptr, mpq_srcptr, mp_bitcnt_t);