Package_Tools/include-C/gmp/gmp_backup.pas

function mpz_get_ui(para1: Tmpz_srcptr): dword; cdecl; external libgmp name '__gmpz_get_ui';
function mpz_getlimbn(para1: Tmpz_srcptr; para2: Tmp_size_t): Tmp_limb_t; cdecl; external libgmp name '__gmpz_getlimbn';
function mpz_hamdist(para1: Tmpz_srcptr; para2: Tmpz_srcptr): Tmp_bitcnt_t; cdecl; external libgmp name '__gmpz_hamdist';
procedure mpz_import(para1: Tmpz_ptr; para2: Tsize_t; para3: longint; para4: Tsize_t; para5: longint; para6: Tsize_t; para7: pointer); cdecl; external libgmp name '__gmpz_import';
procedure mpz_init(para1: Tmpz_ptr); cdecl; external libgmp name '__gmpz_init';
procedure mpz_init2(para1: Tmpz_ptr; para2: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpz_init2';
procedure mpz_inits(para1: Tmpz_ptr); varargs; cdecl; external libgmp name '__gmpz_inits';
procedure mpz_init_set(para1: Tmpz_ptr; para2: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_init_set';
procedure mpz_init_set_d(para1: Tmpz_ptr; para2: double); cdecl; external libgmp name '__gmpz_init_set_d';
procedure mpz_init_set_si(para1: Tmpz_ptr; para2: longint); cdecl; external libgmp name '__gmpz_init_set_si';
function mpz_init_set_str(para1: Tmpz_ptr; para2: pchar; para3: longint): longint; cdecl; external libgmp name '__gmpz_init_set_str';
procedure mpz_init_set_ui(para1: Tmpz_ptr; para2: dword); cdecl; external libgmp name '__gmpz_init_set_ui';
function mpz_inp_raw(para1: Tmpz_ptr; para2: PFILE): Tsize_t; cdecl; external libgmp name '__gmpz_inp_raw';
function mpz_inp_str(para1: Tmpz_ptr; para2: PFILE; para3: longint): Tsize_t; cdecl; external libgmp name '__gmpz_inp_str';
function mpz_invert(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: Tmpz_srcptr): longint; cdecl; external libgmp name '__gmpz_invert';
procedure mpz_ior(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_ior';
function mpz_jacobi(para1: Tmpz_srcptr; para2: Tmpz_srcptr): longint; cdecl; external libgmp name '__gmpz_jacobi';
function mpz_kronecker_si(para1: Tmpz_srcptr; para2: longint): longint; cdecl; external libgmp name '__gmpz_kronecker_si';
function mpz_kronecker_ui(para1: Tmpz_srcptr; para2: dword): longint; cdecl; external libgmp name '__gmpz_kronecker_ui';
function mpz_si_kronecker(para1: longint; para2: Tmpz_srcptr): longint; cdecl; external libgmp name '__gmpz_si_kronecker';
function mpz_ui_kronecker(para1: dword; para2: Tmpz_srcptr): longint; cdecl; external libgmp name '__gmpz_ui_kronecker';
procedure mpz_lcm(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_lcm';
procedure mpz_lcm_ui(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: dword); cdecl; external libgmp name '__gmpz_lcm_ui';
procedure mpz_lucnum_ui(para1: Tmpz_ptr; para2: dword); cdecl; external libgmp name '__gmpz_lucnum_ui';
procedure mpz_lucnum2_ui(para1: Tmpz_ptr; para2: Tmpz_ptr; para3: dword); cdecl; external libgmp name '__gmpz_lucnum2_ui';
function mpz_millerrabin(para1: Tmpz_srcptr; para2: longint): longint; cdecl; external libgmp name '__gmpz_millerrabin';
procedure mpz_mod(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_mod';
procedure mpz_mul(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_mul';
procedure mpz_mul_2exp(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpz_mul_2exp';
procedure mpz_mul_si(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: longint); cdecl; external libgmp name '__gmpz_mul_si';
procedure mpz_mul_ui(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: dword); cdecl; external libgmp name '__gmpz_mul_ui';
procedure mpz_neg(para1: Tmpz_ptr; para2: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_neg';
procedure mpz_nextprime(para1: Tmpz_ptr; para2: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_nextprime';
function mpz_prevprime(para1: Tmpz_ptr; para2: Tmpz_srcptr): longint; cdecl; external libgmp name '__gmpz_prevprime';
function mpz_out_raw(para1: PFILE; para2: Tmpz_srcptr): Tsize_t; cdecl; external libgmp name '__gmpz_out_raw';
function mpz_out_str(para1: PFILE; para2: longint; para3: Tmpz_srcptr): Tsize_t; cdecl; external libgmp name '__gmpz_out_str';
function mpz_perfect_power_p(para1: Tmpz_srcptr): longint; cdecl; external libgmp name '__gmpz_perfect_power_p';
function mpz_perfect_square_p(para1: Tmpz_srcptr): longint; cdecl; external libgmp name '__gmpz_perfect_square_p';
function mpz_popcount(para1: Tmpz_srcptr): Tmp_bitcnt_t; cdecl; external libgmp name '__gmpz_popcount';
procedure mpz_pow_ui(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: dword); cdecl; external libgmp name '__gmpz_pow_ui';
procedure mpz_powm(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: Tmpz_srcptr; para4: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_powm';
procedure mpz_powm_sec(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: Tmpz_srcptr; para4: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_powm_sec';
procedure mpz_powm_ui(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: dword; para4: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_powm_ui';
function mpz_probab_prime_p(para1: Tmpz_srcptr; para2: longint): longint; cdecl; external libgmp name '__gmpz_probab_prime_p';
procedure mpz_random(para1: Tmpz_ptr; para2: Tmp_size_t); cdecl; external libgmp name '__gmpz_random';
procedure mpz_random2(para1: Tmpz_ptr; para2: Tmp_size_t); cdecl; external libgmp name '__gmpz_random2';
procedure mpz_realloc2(para1: Tmpz_ptr; para2: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpz_realloc2';
function mpz_remove(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: Tmpz_srcptr): Tmp_bitcnt_t; cdecl; external libgmp name '__gmpz_remove';
function mpz_root(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: dword): longint; cdecl; external libgmp name '__gmpz_root';
procedure mpz_rootrem(para1: Tmpz_ptr; para2: Tmpz_ptr; para3: Tmpz_srcptr; para4: dword); cdecl; external libgmp name '__gmpz_rootrem';
procedure mpz_rrandomb(para1: Tmpz_ptr; para2: Tgmp_randstate_ptr; para3: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpz_rrandomb';
function mpz_scan0(para1: Tmpz_srcptr; para2: Tmp_bitcnt_t): Tmp_bitcnt_t; cdecl; external libgmp name '__gmpz_scan0';
function mpz_scan1(para1: Tmpz_srcptr; para2: Tmp_bitcnt_t): Tmp_bitcnt_t; cdecl; external libgmp name '__gmpz_scan1';
procedure mpz_set(para1: Tmpz_ptr; para2: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_set';
procedure mpz_set_d(para1: Tmpz_ptr; para2: double); cdecl; external libgmp name '__gmpz_set_d';
procedure mpz_set_f(para1: Tmpz_ptr; para2: Tmpf_srcptr); cdecl; external libgmp name '__gmpz_set_f';
procedure mpz_set_q(para1: Tmpz_ptr; para2: Tmpq_srcptr); cdecl; external libgmp name '__gmpz_set_q';
procedure mpz_set_si(para1: Tmpz_ptr; para2: longint); cdecl; external libgmp name '__gmpz_set_si';
function mpz_set_str(para1: Tmpz_ptr; para2: pchar; para3: longint): longint; cdecl; external libgmp name '__gmpz_set_str';
procedure mpz_set_ui(para1: Tmpz_ptr; para2: dword); cdecl; external libgmp name '__gmpz_set_ui';
procedure mpz_setbit(para1: Tmpz_ptr; para2: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpz_setbit';
function mpz_size(para1: Tmpz_srcptr): Tsize_t; cdecl; external libgmp name '__gmpz_size';
function mpz_sizeinbase(para1: Tmpz_srcptr; para2: longint): Tsize_t; cdecl; external libgmp name '__gmpz_sizeinbase';
procedure mpz_sqrt(para1: Tmpz_ptr; para2: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_sqrt';
procedure mpz_sqrtrem(para1: Tmpz_ptr; para2: Tmpz_ptr; para3: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_sqrtrem';
procedure mpz_sub(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_sub';
procedure mpz_sub_ui(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: dword); cdecl; external libgmp name '__gmpz_sub_ui';
procedure mpz_ui_sub(para1: Tmpz_ptr; para2: dword; para3: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_ui_sub';
procedure mpz_submul(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_submul';
procedure mpz_submul_ui(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: dword); cdecl; external libgmp name '__gmpz_submul_ui';
procedure mpz_swap(para1: Tmpz_ptr; para2: Tmpz_ptr); cdecl; external libgmp name '__gmpz_swap';
function mpz_tdiv_ui(para1: Tmpz_srcptr; para2: dword): dword; cdecl; external libgmp name '__gmpz_tdiv_ui';
procedure mpz_tdiv_q(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_tdiv_q';
procedure mpz_tdiv_q_2exp(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpz_tdiv_q_2exp';
function mpz_tdiv_q_ui(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: dword): dword; cdecl; external libgmp name '__gmpz_tdiv_q_ui';
procedure mpz_tdiv_qr(para1: Tmpz_ptr; para2: Tmpz_ptr; para3: Tmpz_srcptr; para4: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_tdiv_qr';
function mpz_tdiv_qr_ui(para1: Tmpz_ptr; para2: Tmpz_ptr; para3: Tmpz_srcptr; para4: dword): dword; cdecl; external libgmp name '__gmpz_tdiv_qr_ui';
procedure mpz_tdiv_r(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_tdiv_r';
procedure mpz_tdiv_r_2exp(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpz_tdiv_r_2exp';
function mpz_tdiv_r_ui(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: dword): dword; cdecl; external libgmp name '__gmpz_tdiv_r_ui';
function mpz_tstbit(para1: Tmpz_srcptr; para2: Tmp_bitcnt_t): longint; cdecl; external libgmp name '__gmpz_tstbit';
procedure mpz_ui_pow_ui(para1: Tmpz_ptr; para2: dword; para3: dword); cdecl; external libgmp name '__gmpz_ui_pow_ui';
procedure mpz_urandomb(para1: Tmpz_ptr; para2: Tgmp_randstate_ptr; para3: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpz_urandomb';
procedure mpz_urandomm(para1: Tmpz_ptr; para2: Tgmp_randstate_ptr; para3: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_urandomm';
procedure mpz_xor(para1: Tmpz_ptr; para2: Tmpz_srcptr; para3: Tmpz_srcptr); cdecl; external libgmp name '__gmpz_xor';
function mpz_limbs_read(para1: Tmpz_srcptr): Tmp_srcptr; cdecl; external libgmp name '__gmpz_limbs_read';
function mpz_limbs_write(para1: Tmpz_ptr; para2: Tmp_size_t): Tmp_ptr; cdecl; external libgmp name '__gmpz_limbs_write';
function mpz_limbs_modify(para1: Tmpz_ptr; para2: Tmp_size_t): Tmp_ptr; cdecl; external libgmp name '__gmpz_limbs_modify';
procedure mpz_limbs_finish(para1: Tmpz_ptr; para2: Tmp_size_t); cdecl; external libgmp name '__gmpz_limbs_finish';
function mpz_roinit_n(para1: Tmpz_ptr; para2: Tmp_srcptr; para3: Tmp_size_t): Tmpz_srcptr; cdecl; external libgmp name '__gmpz_roinit_n';
{*************** Rational (i.e. Q) routines.  *************** }
procedure mpq_abs(para1: Tmpq_ptr; para2: Tmpq_srcptr); cdecl; external libgmp name '__gmpq_abs';
procedure mpq_add(para1: Tmpq_ptr; para2: Tmpq_srcptr; para3: Tmpq_srcptr); cdecl; external libgmp name '__gmpq_add';
procedure mpq_canonicalize(para1: Tmpq_ptr); cdecl; external libgmp name '__gmpq_canonicalize';
procedure mpq_clear(para1: Tmpq_ptr); cdecl; external libgmp name '__gmpq_clear';
procedure mpq_clears(para1: Tmpq_ptr); varargs; cdecl; external libgmp name '__gmpq_clears';
function mpq_cmp(para1: Tmpq_srcptr; para2: Tmpq_srcptr): longint; cdecl; external libgmp name '__gmpq_cmp';
function _mpq_cmp_si(para1: Tmpq_srcptr; para2: longint; para3: dword): longint; cdecl; external libgmp name '__g_mpq_cmp_si';
function _mpq_cmp_ui(para1: Tmpq_srcptr; para2: dword; para3: dword): longint; cdecl; external libgmp name '__g_mpq_cmp_ui';
function mpq_cmp_z(para1: Tmpq_srcptr; para2: Tmpz_srcptr): longint; cdecl; external libgmp name '__gmpq_cmp_z';
procedure mpq_div(para1: Tmpq_ptr; para2: Tmpq_srcptr; para3: Tmpq_srcptr); cdecl; external libgmp name '__gmpq_div';
procedure mpq_div_2exp(para1: Tmpq_ptr; para2: Tmpq_srcptr; para3: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpq_div_2exp';
